<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:flow_verticalStyle="packed"
        app:flow_verticalGap="16dp"
        app:constraint_referenced_ids="switch_android_logger,switch_print_logger,switch_toast_logger,switch_remote_logger"
        android:id="@+id/flow" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_android_logger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/android_logger" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_print_logger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/print_logger" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_toast_logger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/toast_logger" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_remote_logger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remote_logger"
        />

    <Button
        android:id="@+id/button_log_debug"
        android:text="@string/log"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/flow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_log_debug_locally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_log_debug_locally"
        android:text="@string/log_locally"
        app:layout_constraintTop_toBottomOf="@id/button_log_debug"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>